20250923 bom 조회, 구매ì£발주관리 조회